# ollama-redis-rag-stack

./: ._.git  LICENSE  Makefile  README.md  Taskfile.yml  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: config.py  instrumentation.py  logging_config.py  main.py  schemas.py
backend/app/services/: audit.py  embedding.py  guards.py  ingestion.py  ollama.py  pipeline.py  vector_store.py
backend/tests/: test_guards.py  test_ingestion.py  test_pipeline.py
backend/warehouse_rag_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
charts/warehouse-rag/: Chart.yaml  values.yaml
charts/warehouse-rag/templates/: _helpers.tpl  backend-deployment.yaml  frontend-deployment.yaml  redis-statefulset.yaml
data/: eval_questions.json  warehouse_faq.md  warehouse_ops.csv
docs/: architecture.md  cloud-deployment.md  operations.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ChatComposer.tsx  MessageList.tsx  ModelSelector.tsx  SourceDrawer.tsx  StatusPill.tsx  ThemeToggle.tsx
frontend/src/styles/: main.css
frontend/src/types/: chat.ts
infra/: grafana-dashboard.json  promtail-config.yml
scripts/: eval_rag.py  k6-load.js
