[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "warehouse-rag-backend"
version = "0.1.0"
description = "FastAPI backend for the Warehouse Knowledge Assistant"
readme = "README.md"
authors = [{ name = "realr4an" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.24",
    "httpx>=0.26",
    "redis>=5.0",
    "sentence-transformers>=2.6",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.2",
    "pypdf>=4.2",
    "prometheus-client>=0.20",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "httpx>=0.26",
    "fakeredis>=2.20",
    "ruff>=0.4",
    "black>=24.4",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
pythonpath = ["app"]
addopts = "-ra"
